--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
-  "buildCommand": "cd web && npm run build",
-  "outputDirectory": "web/dist",
-  "installCommand": "cd web && npm install",
-  "devCommand": "cd web && npm run dev",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
+  "devCommand": "npm run dev",
   "framework": "vite",
+  "rootDirectory": "web",
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ]
