--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,10 +20,11 @@
     "test:coverage": "jest --coverage"
   },
   "jest": {
-    "testEnvironment": "node",
-    "transform": {
-      "^.+\\.(ts|tsx)$": "babel-jest"
-    },
+    "preset": "jest-expo",
+    "setupFiles": [
+      "<rootDir>/jest.setup.globals.ts",
+      "<rootDir>/jest.setup.ts"
+    ],
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
     },
@@ -34,6 +35,7 @@
       "!src/**/__tests__/**"
     ],
     "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.test.{ts,tsx}",
       "<rootDir>/src/**/__tests__/**/*.pure.test.{ts,tsx}"
     ]
   },
@@ -77,6 +79,9 @@
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^29.5.14",
     "@types/react": "~19.1.0",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
