--- a/mobile/package.json
+++ b/mobile/package.json
@@ -41,7 +41,6 @@
   },
   "dependencies": {
     "@callstack/liquid-glass": "^0.7.0",
-    "@clerk/clerk-expo": "^2.19.22",
     "@expo-google-fonts/urbanist": "^0.4.2",
     "@expo/cli": "^54.0.22",
     "@expo/metro-runtime": "~6.1.2",
@@ -50,6 +49,7 @@
     "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.1",
+    "@supabase/supabase-js": "^2.95.3",
     "expo": "~54.0.33",
     "expo-auth-session": "^7.0.10",
     "expo-blur": "~15.0.8",
@@ -77,6 +77,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
     "zustand": "^5.0.10"
