--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,8 @@
     "react-hot-toast": "^2.6.0",
     "react-joyride": "^2.9.3",
     "react-router-dom": "^7.12.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@playwright/test": "^1.58.0",
