--- a/web/package.json
+++ b/web/package.json
@@ -8,8 +8,12 @@
     "build": "vite build",
     "preview": "vite preview",
     "deploy": "vite build && vercel --prod",
-    "test": "playwright test",
-    "test:ui": "playwright test --ui",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "test:career-path": "playwright test career-path-designer"
   },
   "dependencies": {
@@ -29,14 +33,21 @@
   "devDependencies": {
     "@playwright/test": "^1.58.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/ui": "^4.0.18",
     "autoprefixer": "^10.4.23",
+    "jsdom": "^28.0.0",
     "playwright": "^1.57.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18"
   }
 }
