--- a/web/package.json
+++ b/web/package.json
@@ -18,8 +18,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.97.0",
+    "@types/file-saver": "^2.0.7",
     "clsx": "^2.1.1",
+    "docx": "^9.5.3",
     "dompurify": "^3.2.2",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "jspdf": "^4.2.0",
     "lucide-react": "^0.562.0",
     "pdfjs-dist": "^5.4.624",
